Enforce a font-size of 16px to prevent zooming into elements on mobile and reduce the problem within #2239

--- a/assets/scss/frontend/modal.scss
+++ b/assets/scss/frontend/modal.scss
@@ -30,6 +30,9 @@
 	  margin-top: 0;
 	  padding-top: 0;
 	}
+	.give-input {
+	  font-size:16px; // Prevents mobile zoom to inputs.
+	}
   }
 
   // Popup content holder
